kubernetes/monitoring/grafana-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: smart-home
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: nadavnv/smart-home-grafana:V1.0.20
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: "1"
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: smart-home
spec:
  # ClusterIP by default
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: smart-home
  labels:
    app.kubernetes.io/name: grafana-ingress
  annotations:
spec:
  rules:
    - host: grafana.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana-svc
                port:
                  number: 3000
